--- a/login.html
+++ b/login.html
@@ -61,7 +61,7 @@
 <body>
     <div class="login-container">
         <h2>Login</h2>
-        <form>
+        <form id="login-form">
             <div class="input-field">
                 <label for="username">Username</label>
                 <input type="text" id="username" name="username" placeholder="Enter your username" required>
@@ -70,8 +70,34 @@
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" placeholder="Enter your password" required>
             </div>
-            <button type="submit" class="login-button"><a href="design.html">Login</a></button>
+            <button type="submit" class="login-button">Login</button>
         </form>
     </div>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            const form = document.getElementById("login-form");
+
+            form.addEventListener("submit", function(event) {
+                event.preventDefault();
+
+                const usernameInput = form.querySelector("#username");
+                const passwordInput = form.querySelector("#password");
+
+                const enteredUsername = usernameInput.value;
+                const enteredPassword = passwordInput.value;
+
+                // Check if the entered username and password are correct
+                if (enteredUsername === "kalyan" && enteredPassword === "123") {
+                    // Redirect to the desired page after successful login
+                    window.location.href = "design.html";
+                } else {
+                    alert("Invalid username or password. Please try again.");
+                    usernameInput.value = "";
+                    passwordInput.value = "";
+                }
+            });
+        });
+    </script>
 </body>
 </html>
